--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="#two">About Me</a></li>
+								<li><a href="#three">Skills</a></li>
+								<li><a href="#four">Projects</a></li>
+								//<li><a href="#">Sign Up</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -72,7 +72,7 @@
 									<a href="#" class="image"><img src="images/HeadshotZoom.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Bio Goes Here</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<p>Although I favor the back-end, I truly enjoy learning and using the full stack.</p>
 										<a href="#" class="special">LinkedIn</a>
 									</div>
 								</div>
@@ -97,9 +97,9 @@
 									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/MVCTechRevSnip.jpg" alt="" /></a>
 											<h3 class="major">MVC Technology Review Site</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p>MVC Application using code-first model design. Users can read and write reviews for technology products.</p>
 											<a href="#" class="special">View in Github</a>
 										</article>
 										<article>
@@ -109,15 +109,15 @@
 											<a href="#" class="special">View in Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Bank Account Console Application</h3>
+											<a href="#" class="image"><img src="images/BankAccountsSnip.jpg" alt="" /></a>
+											<h3 class="major">Bank Account C# Console Application</h3>
 											<p>adsf adflj oafd</p>
 											<a href="#" class="special">View in Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/MVCFortuneTellerSnip.jpg" alt="" /></a>
 											<h3 class="major">Project #4</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p>test</p>
 											<a href="#" class="special">View in Github</a>
 										</article>
 									</section>
