--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<title>Mike Spriggs Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -36,7 +36,7 @@
 								<li><a href="#two">About Me</a></li>
 								<li><a href="#three">Skills</a></li>
 								<li><a href="#four">Projects</a></li>
-								//<li><a href="#">Sign Up</a></li>
+								<!--<li><a href="#">Sign Up</a></li>-->
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -47,7 +47,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-diamond"></span></div>
 							<h2>Hello, my name is Mike.</h2>
-							<p>I'm a Junior Developer in Cleveland, Ohio</p>
+							<p>I'm a Software Developer living in Cleveland, Ohio.</p>
 						</div>
 					</section>
 
@@ -72,8 +72,13 @@
 									<a href="#" class="image"><img src="images/HeadshotZoom.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Bio Goes Here</h2>
-										<p>Although I favor the back-end, I truly enjoy learning and using the full stack.</p>
-										<a href="#" class="special">LinkedIn</a>
+										<p>I am currently enrolled in an intense, full stack computer programming bootcamp.  
+                                        Although I favor the back-end, I truly enjoy learning and using the full stack.
+                                        When I'm not coding, I enjoy hiking, fishing and reading.</p>
+										<!--<a href="https://www.linkedin.com/in/michael-spriggs/ b#" class="special fa fa-linkedin">LinkedIn</a>-->
+                                        <a href="https://www.linkedin.com/in/michael-spriggs/ b#" class="special">LinkedIn</a>
+                                        <!--<span class="fa fa-linkedin" aria-hidden="true"></span>--> 
+
 									</div>
 								</div>
 							</section>
@@ -81,11 +86,11 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/HeadshotZoom.jpg" alt="" /></a>
+									<!--<a href="#" class="image"><img src="images/HeadshotZoom.jpg" alt="" /></a>-->
 									<div class="content">
 										<h2 class="major">Current Skills</h2>
 										<p>C# | .NET | Active Server Pages / ASP.net | JQuery | Bootstrap | MVC | HTML5 | CSS3 |Object Oriented Programming (OOP) | Responsive Design / Mobile | Transactional Databases / MS SQL | Source Control / GitHub</p>
-										<a href="#" class="special">Github</a>
+										<a href="https://github.com/mikespriggs26" class="special">Github</a>
 									</div>
 								</div>
 							</section>
@@ -100,25 +105,25 @@
 											<a href="#" class="image"><img src="images/MVCTechRevSnip.jpg" alt="" /></a>
 											<h3 class="major">MVC Technology Review Site</h3>
 											<p>MVC Application using code-first model design. Users can read and write reviews for technology products.</p>
-											<a href="#" class="special">View in Github</a>
+											<a href="https://github.com/mikespriggs26/MVCReviewSite" class="special">View in Github</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/WardrobePortfolioPic.jpg" alt="" /></a>
 											<h3 class="major">MVC Wardrobe Site</h3>
 											<p>SQL Database-first MVC project for managing and displaying the user's wardrobe</p>
-											<a href="#" class="special">View in Github</a>
+											<a href="https://github.com/mikespriggs26/Wardrobe" class="special">View in Github</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/BankAccountsSnip.jpg" alt="" /></a>
 											<h3 class="major">Bank Account C# Console Application</h3>
-											<p>adsf adflj oafd</p>
-											<a href="#" class="special">View in Github</a>
+											<p>Manages a client's account information and transactions in multiple accounts.</p>
+											<a href="https://github.com/mikespriggs26/BankAccountProject" class="special">View in Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/MVCFortuneTellerSnip.jpg" alt="" /></a>
-											<h3 class="major">Project #4</h3>
-											<p>test</p>
-											<a href="#" class="special">View in Github</a>
+											<a href="#" class="image"><img src="images/virtualPetSnip.jpg" alt="" /></a>
+											<h3 class="major">Virtual Pet Console Application</h3>
+											<p>Allows a user to interact with and to care for a diabetic dog.</p>
+											<a href="https://github.com/mikespriggs26/VirtualPet-SummerFall" class="special">View in Github</a>
 										</article>
 									</section>
 									<ul class="actions">
