--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/MVCTechRevSnip.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/MVCTechRevSnip.JPG" alt="" /></a>
 											<h3 class="major">MVC Technology Review Site</h3>
 											<p>MVC Application using code-first model design. Users can read and write reviews for technology products.</p>
 											<a href="https://github.com/mikespriggs26/MVCReviewSite" class="special">View in Github</a>
@@ -114,13 +114,13 @@
 											<a href="https://github.com/mikespriggs26/Wardrobe" class="special">View in Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/BankAccountsSnip.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/BankAccountsSnip.JPG" alt="" /></a>
 											<h3 class="major">Bank Account C# Console Application</h3>
 											<p>Manages a client's account information and transactions in multiple accounts.</p>
 											<a href="https://github.com/mikespriggs26/BankAccountProject" class="special">View in Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/virtualPetSnip.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/virtualPetSnip.JPG" alt="" /></a>
 											<h3 class="major">Virtual Pet Console Application</h3>
 											<p>Allows a user to interact with and to care for a diabetic dog.</p>
 											<a href="https://github.com/mikespriggs26/VirtualPet-SummerFall" class="special">View in Github</a>
