--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/HeadshotZoom.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Bio Goes Here</h2>
+										<h2 class="major">Mike Spriggs</h2>
 										<p>I am currently enrolled in an intense, full stack computer programming bootcamp.  
                                         Although I favor the back-end, I truly enjoy learning and using the full stack.
                                         When I'm not coding, I enjoy hiking, fishing and reading.</p>
@@ -99,7 +99,7 @@
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">View My Projects</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<!--<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>-->
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/MVCTechRevSnip.JPG" alt="" /></a>
