--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Solid State by HTML5 UP
 	html5up.net | @ajlkn
@@ -45,7 +45,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-diamond"></span></div>
+							<div class="logo"><span class="icon fa-code"></span></div>
 							<h2>Hello, my name is Mike.</h2>
 							<p>I'm a Software Developer living in Cleveland, Ohio.</p>
 						</div>
@@ -127,7 +127,7 @@
 										</article>
 									</section>
 									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
+										<!--<li><a href="#" class="button">Browse All</a></li-->
 									</ul>
 								</div>
 							</section>
@@ -136,42 +136,55 @@
 
 				<!-- Footer -->
 					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="field">
-									<label for="name">Name</label>
-									<input type="text" name="name" id="name" />
-								</div>
-								<div class="field">
-									<label for="email">Email</label>
-									<input type="email" name="email" id="email" />
-								</div>
-								<div class="field">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" rows="4"></textarea>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-							<ul class="contact">
-								<li class="fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="fa-phone">(000) 000-0000</li>
-								<li class="fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="fa-facebook"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
+                        <div class="inner">
+                            <h2 class="major">Get in touch</h2>
+                            
+                                <p>Mike Spriggs</p>
+                                <p>Email: mikespriggs@msn.com</p>
+                                <p>
+                                    <a href="https://www.linkedin.com/in/michael-spriggs/ b#" id="linkedin" class="fa fa-linkedin"></a>
+                                    <a href="https://github.com/mikespriggs26" id="github" class="fa fa-github"></a>
+                                </p>
+                           
+
+                            <!--<ul class="actions vertical contact">
+                                <li class="largeIcon"><a href="https://www.linkedin.com/in/michael-spriggs/ b#" id="linkedin" class="fa fa-linkedin"></a></li>
+                                <li class="largeIcon"><a href="https://github.com/mikespriggs26" class="fa fa-github"></a></li>
+                            </ul>-->
+                            <!--<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+        <form method="post" action="#">
+            <div class="field">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" />
+            </div>
+            <div class="field">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" />
+            </div>
+            <div class="field">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" rows="4"></textarea>
+            </div>
+            <ul class="actions">
+                <li><input type="submit" value="Send Message" /></li>
+            </ul>
+        </form>
+        <ul class="contact">
+            <li class="fa-home">
+                Untitled Inc<br />
+                1234 Somewhere Road Suite #2894<br />
+                Nashville, TN 00000-0000
+            </li>
+            <li class="fa-phone">(000) 000-0000</li>
+            <li class="fa-envelope"><a href="#">information@untitled.tld</a></li>
+            <li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
+            <li class="fa-facebook"><a href="#">facebook.com/untitled-tld</a></li>
+            <li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+        </ul>-->
+        <ul class="copyright">
+            <li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        </ul>
+                        </div>
 					</section>
 
 			</div>
