--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<li><a href="#two">About Me</a></li>
 								<li><a href="#three">Skills</a></li>
 								<li><a href="#four">Projects</a></li>
-								<!--<li><a href="#">Sign Up</a></li>-->
+								<li><a href="#footer">Contact Me    </a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -121,7 +121,7 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/virtualPetSnip.JPG" alt="" /></a>
-											<h3 class="major">Virtual Pet Console Application</h3>
+											<h3 class="major">Virtual Pet C# Console Application</h3>
 											<p>Allows a user to interact with and to care for a diabetic dog.</p>
 											<a href="https://github.com/mikespriggs26/VirtualPet-SummerFall" class="special">View in Github</a>
 										</article>
