--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<li><a href="#two">About Me</a></li>
 								<li><a href="#three">Skills</a></li>
 								<li><a href="#four">Projects</a></li>
-								<li><a href="#footer">Contact Me    </a></li>
+								<li><a href="#footer">Contact Me</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -76,7 +76,7 @@
                                         Although I favor the back-end, I truly enjoy learning and using the full stack.
                                         When I'm not coding, I enjoy hiking, fishing and reading.</p>
 										<!--<a href="https://www.linkedin.com/in/michael-spriggs/ b#" class="special fa fa-linkedin">LinkedIn</a>-->
-                                        <a href="https://www.linkedin.com/in/michael-spriggs/ b#" class="special">LinkedIn</a>
+                                        <a href="https://www.linkedin.com/in/michael-spriggs/ b#" target="_blank" class="special">LinkedIn</a>
                                         <!--<span class="fa fa-linkedin" aria-hidden="true"></span>--> 
 
 									</div>
@@ -90,7 +90,7 @@
 									<div class="content">
 										<h2 class="major">Current Skills</h2>
 										<p>C# | .NET | Active Server Pages / ASP.net | JQuery | Bootstrap | MVC | HTML5 | CSS3 |Object Oriented Programming (OOP) | Responsive Design / Mobile | Transactional Databases / MS SQL | Source Control / GitHub</p>
-										<a href="https://github.com/mikespriggs26" class="special">Github</a>
+										<a href="https://github.com/mikespriggs26" target="_blank" class="special">Github</a>
 									</div>
 								</div>
 							</section>
@@ -105,25 +105,25 @@
 											<a href="#" class="image"><img src="images/MVCTechRevSnip.JPG" alt="" /></a>
 											<h3 class="major">MVC Technology Review Site</h3>
 											<p>MVC Application using code-first model design. Users can read and write reviews for technology products.</p>
-											<a href="https://github.com/mikespriggs26/MVCReviewSite" class="special">View in Github</a>
+											<a href="https://github.com/mikespriggs26/MVCReviewSite" target="_blank" class="special">View in Github</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/WardrobePortfolioPic.jpg" alt="" /></a>
 											<h3 class="major">MVC Wardrobe Site</h3>
 											<p>SQL Database-first MVC project for managing and displaying the user's wardrobe</p>
-											<a href="https://github.com/mikespriggs26/Wardrobe" class="special">View in Github</a>
+											<a href="https://github.com/mikespriggs26/Wardrobe" target="_blank" class="special">View in Github</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/BankAccountsSnip.JPG" alt="" /></a>
 											<h3 class="major">Bank Account C# Console Application</h3>
 											<p>Manages a client's account information and transactions in multiple accounts.</p>
-											<a href="https://github.com/mikespriggs26/BankAccountProject" class="special">View in Github</a>
+											<a href="https://github.com/mikespriggs26/BankAccountProject" target="_blank" class="special">View in Github</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/virtualPetSnip.JPG" alt="" /></a>
 											<h3 class="major">Virtual Pet C# Console Application</h3>
 											<p>Allows a user to interact with and to care for a diabetic dog.</p>
-											<a href="https://github.com/mikespriggs26/VirtualPet-SummerFall" class="special">View in Github</a>
+											<a href="https://github.com/mikespriggs26/VirtualPet-SummerFall" target="_blank" class="special">View in Github</a>
 										</article>
 									</section>
 									<ul class="actions">
@@ -142,8 +142,8 @@
                                 <p>Mike Spriggs</p>
                                 <p>Email: mikespriggs@msn.com</p>
                                 <p>
-                                    <a href="https://www.linkedin.com/in/michael-spriggs/ b#" id="linkedin" class="fa fa-linkedin"></a>
-                                    <a href="https://github.com/mikespriggs26" id="github" class="fa fa-github"></a>
+                                    <a href="https://www.linkedin.com/in/michael-spriggs/ b#" target="_blank" id="linkedin" class="fa fa-linkedin"></a>
+                                    <a href="https://github.com/mikespriggs26" target="_blank" id="github" class="fa fa-github"></a>
                                 </p>
                            
 
